se agrego dos cursos - P1.Cursos.Alumno

--- a/Desarrollo/SACNS/codigo/P1.Cursos.Alumno.html
+++ b/Desarrollo/SACNS/codigo/P1.Cursos.Alumno.html
@@ -179,6 +179,40 @@
                                             </div>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td><img src="assets/img/ingles.webp" width="32" height="32"
+                                                class="rounded-circle my-n1" alt="Avatar"></td>
+                                        <td>Ingles</td>
+                                        <td>Apellido1 Apellido2, Nombre1 Nombre2</td>
+                                        <td>
+                                            <div class="progress" style="height: 3px;">
+                                                <div class="progress-bar" role="progressbar" style="width: 25%;"
+                                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>25%
+                                        </td>
+                                        <td>
+                                            <div class="btn custom-btn vertical">
+                                                ...
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><img src="assets/img/e_Fisica.jfif" width="32" height="32"
+                                                class="rounded-circle my-n1" alt="Avatar"></td>
+                                        <td>Educación Fisica</td>
+                                        <td>Apellido1 Apellido2, Nombre1 Nombre2</td>
+                                        <td>
+                                            <div class="progress" style="height: 3px;">
+                                                <div class="progress-bar" role="progressbar" style="width: 25%;"
+                                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                            </div>25%
+                                        </td>
+                                        <td>
+                                            <div class="btn custom-btn vertical">
+                                                ...
+                                            </div>
+                                        </td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
