se completo la barra de observaciones

--- a/Desarrollo/SACNS/codigo/P1.Observaciones.Alumno.html
+++ b/Desarrollo/SACNS/codigo/P1.Observaciones.Alumno.html
@@ -141,3 +141,32 @@
                     </tbody>
   
                   </table>
+                </div>
+
+                <div class="container justify-content-center m-2 p-4" id="datos">
+                  <table  style="width:100%" style="height:100;">
+                    <thead>
+                      
+                    </thead>
+                    <tbody>
+                      <tr >
+                        <td>
+                        <p>Ingles</p>
+                        <p>Horario: 8:00 - 11:00 am</p>
+                        <p>Observacion detallada 1</p>
+                        </td>
+                        <td>
+  
+                        </td>
+                        <td>
+                        <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #4FD1C5; color: #FFFFFF;"> Revisado </button></a>
+                        </td>
+                        <td>
+                        19/08/21
+                        </td>
+                      </tr>  
+                    </tbody>
+  
+                  </table>
+                 
+                </div>
