--- a/Desarrollo/SACNS/codigo/P1.Observaciones.Alumno.html
+++ b/Desarrollo/SACNS/codigo/P1.Observaciones.Alumno.html
@@ -213,7 +213,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="../FRONTEND_ALUMNO_PADRE_GCS/assets/js/sidebar.js"></script>
+    <script src="../codigo/Módulo_Docente_Backend/assets/js/sidebar.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
