se agrego meses a la tabla de notas - P2.Nota.Curso.Alumno.html

--- a/Desarrollo/SACNS/codigo/P2.Nota.Curso.Alumno.html
+++ b/Desarrollo/SACNS/codigo/P2.Nota.Curso.Alumno.html
@@ -227,6 +227,129 @@
                                                         style="background: #E82929; color: #FFFFFF; border: #666;">Desaprobado</button></a>
                                             </td>
                                         </tr>
+                                        <tr>
+                                            <td>                                                     
+                                                <span class="user-subhead">Agosto</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #696F79; color: #FFFFFF; border: #666;">En espera</button></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>                                                     
+                                                <span class="user-subhead">Setiembre</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #696F79; color: #FFFFFF; border: #666;">En espera</button></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>                                                     
+                                                <span class="user-subhead">Octubre</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #696F79; color: #FFFFFF; border: #666;">En espera</button></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>                                                     
+                                                <span class="user-subhead">Noviembre</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #696F79; color: #FFFFFF; border: #666;">En espera</button></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>                                                     
+                                                <span class="user-subhead">Diciembre</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center" >
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <span class="label label-default">--</span>
+                                            </td>
+                                            <td class="text-center">
+                                                <a href="htt://sitioweb.com/a"><button class="btn btn-info" style="background: #696F79; color: #FFFFFF; border: #666;">En espera</button></a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
