se agrego pie de la tabla y se conecto con sidebar.js - P2.Nota.Curso.Alumno

--- a/Desarrollo/SACNS/codigo/P2.Nota.Curso.Alumno.html
+++ b/Desarrollo/SACNS/codigo/P2.Nota.Curso.Alumno.html
@@ -343,6 +343,17 @@
                                             </td>
                                         </tr>
                                     </tbody>
+                                    <tfoot>
+                                        <tr>
+                                            <th ><span>PROMEDIO FINAL</span></th>
+                                            <th class="text-center" >&nbsp;</th>
+                                            <th class="text-center" >&nbsp;</th>
+                                            <th class="text-center" >&nbsp;</th>
+                                            <th class="text-center" >&nbsp;</th>                                                
+                                            <th class="text-center" ><span>--</span></th>                      
+                                            <th class="text-center" ><span>En Espera</span></th>
+                                        </tr>
+                                    </tfoot>
                                 </table>
                             </div>
                         </div>
@@ -350,10 +361,7 @@
                 </div>
             </div>
         </div>
-
-
-
-
+        <script src="assets/js/sidebar.js"></script>
 </body>
 
 </html>
