--- a/Desarrollo/SACNS/codigo/P1.Observaciones.Alumno.html
+++ b/Desarrollo/SACNS/codigo/P1.Observaciones.Alumno.html
@@ -10,7 +10,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="../FRONTEND_ALUMNO_PADRE_GCS/assets/css/P1.Observaciones.Alumno.css" rel="stylesheet">
-    <link rel="stylesheet" href="../FRONTEND_ALUMNO_PADRE_GCS/assets/css/sidebar.css">
+    <link rel="stylesheet" href="assets/css/sidebar.css">
     
     <style type="text/css">
         .btn {
@@ -213,7 +213,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="../codigo/Módulo_Docente_Backend/assets/js/sidebar.js"></script>
+    <script src="assets/js/sidebar.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
