--- a/Desarrollo/SACNS/codigo/P1.Observaciones.Alumno.html
+++ b/Desarrollo/SACNS/codigo/P1.Observaciones.Alumno.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="..\Imagenes\logo.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../FRONTEND_ALUMNO_PADRE_GCS/assets/css/P1.Observaciones.Alumno.css" rel="stylesheet">
+    <link href="assets/css/P1.Observaciones.Alumno.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/sidebar.css">
     
     <style type="text/css">
