Pantalla Registrar_Asistencia.html (modulo profesor)

--- a/Desarrollo/SACNS/codigo/formulario_registro_alumno.1.html
+++ b/Desarrollo/SACNS/codigo/formulario_registro_alumno.1.html
@@ -98,7 +98,13 @@
                         </div>
                         <div class="mb-1">
                             <p class="label-color mb-1">Numero de Telefono*</p>
-                            <input type="text" class="form-control" placeholder="999 - 999 - 999" pattern="[0-9]{9}" required/>
+                            <div class="input-group">
+                                <div class="input-group-prepend" style="height: 80px;">
+                                  <span class="input-group-text" style="height: 80%;"><img src="assets/img/peru.png" alt="" style="height: 20px; width: 30px; margin-right: 4px;"/>+51</span>
+                                </div>
+                                <input type="text" class="form-control" placeholder="999 - 999 - 999" pattern="[0-9]{9}" required/>
+                            </div>
+                           
                         </div>
                         <div class="mb-1">
                             <p class="label-color mb-1">Correo electronico*</p>
