se implemento del usuario admin el crear un profesor

--- a/Desarrollo/SACNS/codigo/registro_tipo_usuario.html
+++ b/Desarrollo/SACNS/codigo/registro_tipo_usuario.html
@@ -57,7 +57,7 @@
                                 <path d="M9.8627 2.225L8.37936 0.75L0.137695 9L8.3877 17.25L9.8627 15.775L3.0877 9L9.8627 2.225Z" fill="#8692A6"/>
                             </svg>
                     
-                            <a>Cerrar Sesión</a>
+                            <a href="admin_principal.php">Volver</a>
                         </div>
                         <div id="volver" class="d-flex align-items-center mb-5 pointer d-none">
                             <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -78,38 +78,42 @@
                             <p class="text-secondary" id="textLoginPage">Hola, "nombre" seleccione el tipo de usuario que quiere crear.</p>
                         </div>
                         <div class="row mx-auto" id="containerBtnRoles">
-                            <div href="#" id="btnCrearUsuario" class="d-block shadow box-pre-login pointer bg-2nd text-decoration-none text-black rounded border-sacns-ge p-2 d-flex align-items-center mt-4 col-lg-10">
-                                <div class="bg-1st p-3 pb-2 ms-2 me-4 polygon">
-                                    <i class="far fa-user fs-5 text-white"></i>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between align-items-center">
-                                    <div>
-                                        <p class="fw-bold mb-0">ALUMNO</p>
-                                        <p class="text-secondary fs-6">Crear un nuevo usuario tipo alumno</p>
+                            <a href="formulario_registro_alumno.1.html">
+                                <div href="#" id="btnCrearAlumno" class="d-block shadow box-pre-login pointer bg-2nd text-decoration-none text-black rounded border-sacns-ge p-2 d-flex align-items-center mt-4 col-lg-10">
+                                    <div class="bg-1st p-3 pb-2 ms-2 me-4 polygon">
+                                        <i class="far fa-user fs-5 text-white"></i>
                                     </div>
-                                    <div class="pe-3 d-none arrow">
-                                        <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.58927 0.577574C7.26383 0.252137 6.73619 0.252137 6.41075 0.577574C6.08532 0.903011 6.08532 1.43065 6.41075 1.75609L10.8215 6.16683H1.16668C0.70644 6.16683 0.333344 6.53993 0.333344 7.00016C0.333344 7.4604 0.70644 7.8335 1.16668 7.8335H10.8215L6.41075 12.2442C6.08532 12.5697 6.08532 13.0973 6.41075 13.4228C6.73619 13.7482 7.26383 13.7482 7.58927 13.4228L13.4226 7.58942C13.748 7.26398 13.748 6.73634 13.4226 6.41091L7.58927 0.577574Z" fill="#2EBD59"/>
-                                        </svg>
+                                    <div class="d-flex w-100 justify-content-between align-items-center">
+                                        <div>
+                                            <p class="fw-bold mb-0">ALUMNO</p>
+                                            <p class="text-secondary fs-6">Crear un nuevo usuario tipo alumno</p>
+                                        </div>
+                                        <div class="pe-3 d-none arrow">
+                                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M7.58927 0.577574C7.26383 0.252137 6.73619 0.252137 6.41075 0.577574C6.08532 0.903011 6.08532 1.43065 6.41075 1.75609L10.8215 6.16683H1.16668C0.70644 6.16683 0.333344 6.53993 0.333344 7.00016C0.333344 7.4604 0.70644 7.8335 1.16668 7.8335H10.8215L6.41075 12.2442C6.08532 12.5697 6.08532 13.0973 6.41075 13.4228C6.73619 13.7482 7.26383 13.7482 7.58927 13.4228L13.4226 7.58942C13.748 7.26398 13.748 6.73634 13.4226 6.41091L7.58927 0.577574Z" fill="#2EBD59"/>
+                                            </svg>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div href="#" id="btnEliminarUsuario" class="d-block shadow box-pre-login pointer bg-2nd text-decoration-none text-black rounded border-sacns-ge p-2 d-flex align-items-center mt-4 col-lg-10">
-                                <div class="bg-1st p-3 pb-2 ms-2 me-4 polygon">
-                                    <i class="fas fa-suitcase fs-5 text-white"></i>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between align-items-center">
-                                    <div>
-                                        <p class="fw-bold mb-0">DOCENTE</p>
-                                        <p class="text-secondary fs-6">Crear un nuevo usuario tipo docente</p>
+                            </a>
+                            <a href="registro_docente.html">
+                                <div href="#" id="btnCrearDocente" class="d-block shadow box-pre-login pointer bg-2nd text-decoration-none text-black rounded border-sacns-ge p-2 d-flex align-items-center mt-4 col-lg-10">
+                                    <div class="bg-1st p-3 pb-2 ms-2 me-4 polygon">
+                                        <i class="fas fa-suitcase fs-5 text-white"></i>
                                     </div>
-                                    <div class="pe-3 d-none arrow">
-                                        <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.58927 0.577574C7.26383 0.252137 6.73619 0.252137 6.41075 0.577574C6.08532 0.903011 6.08532 1.43065 6.41075 1.75609L10.8215 6.16683H1.16668C0.70644 6.16683 0.333344 6.53993 0.333344 7.00016C0.333344 7.4604 0.70644 7.8335 1.16668 7.8335H10.8215L6.41075 12.2442C6.08532 12.5697 6.08532 13.0973 6.41075 13.4228C6.73619 13.7482 7.26383 13.7482 7.58927 13.4228L13.4226 7.58942C13.748 7.26398 13.748 6.73634 13.4226 6.41091L7.58927 0.577574Z" fill="#2EBD59"/>
-                                        </svg>
-                                    </div> 
+                                    <div class="d-flex w-100 justify-content-between align-items-center">
+                                        <div>
+                                            <p class="fw-bold mb-0">DOCENTE</p>
+                                            <p class="text-secondary fs-6">Crear un nuevo usuario tipo docente</p>
+                                        </div>
+                                        <div class="pe-3 d-none arrow">
+                                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M7.58927 0.577574C7.26383 0.252137 6.73619 0.252137 6.41075 0.577574C6.08532 0.903011 6.08532 1.43065 6.41075 1.75609L10.8215 6.16683H1.16668C0.70644 6.16683 0.333344 6.53993 0.333344 7.00016C0.333344 7.4604 0.70644 7.8335 1.16668 7.8335H10.8215L6.41075 12.2442C6.08532 12.5697 6.08532 13.0973 6.41075 13.4228C6.73619 13.7482 7.26383 13.7482 7.58927 13.4228L13.4226 7.58942C13.748 7.26398 13.748 6.73634 13.4226 6.41091L7.58927 0.577574Z" fill="#2EBD59"/>
+                                            </svg>
+                                        </div> 
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
