--- a/Desarrollo/SACNS/codigo/registro_docente.html
+++ b/Desarrollo/SACNS/codigo/registro_docente.html
@@ -76,31 +76,31 @@
                         <div>
                             <h5 class="fw-bold fs-4" id="titleLoginPage">Datos del docente</h5>
                         </div>
-                        <form role="form">
+                        <form role="form" action="src/registro_docente_logic.php" method="POST">
                             <div class="form-group">
                               <label for="full_name">Nombres:</label>
-                              <input type="text" class="form-control" id="full_name_id" name="full_name" placeholder="Juan carlos">
+                              <input type="text" class="form-control" id="full_name_id" name="nombres" placeholder="Juan carlos">
                             </div>
 
                             <div class="form-group">
                               <label for="full_name">Apellidos:</label>
-                              <input type="text" class="form-control" id="full_name_id" name="full_name" placeholder="Torres Cano">
+                              <input type="text" class="form-control" id="full_name_id" name="apellidos" placeholder="Torres Cano">
                             </div>
                             <div class="form-group">
                                 <label for="Telefono">Telefono:</label>
-                                <input type="tel" class="form-control" id="phone" placeholder="+51  123-456-789" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" required>
+                                <input type="tel" class="form-control" id="phone" placeholder="+51  123-456-789" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" required name="celular">
                             </div>
                             <div class="form-group">
                                 <label for="email">Correo:</label>
-                                <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
+                                <input type="email" class="form-control" id="email" placeholder="example@gmail.com" name="email">
                             </div>
                             <div class="form-group">
                                 <label for="DNI">DNI:</label>
-                                <input type="tel" class="form-control" id="DNI" placeholder="28844275">
+                                <input type="tel" class="form-control" id="DNI" placeholder="28844275" name="dni">
                             </div>
                             <div class="form-group">
                                 <label for="pwd">Especialidad :</label> 
-                                <select class="form-select" aria-label="Default select example">
+                                <select class="form-select" aria-label="Default select example" name="especialidad">
                                     <option selected>Seleccione</option>
                                     <option value="1">Matematica</option>
                                     <option value="2">Comunicacion</option>
@@ -110,8 +110,7 @@
                                 </select>
                             </div>
                             <div  class = " mt-5 " >
-                            <button  class = " btn btn-colors d-block w-100 " > Registrar </button>
-                            <input  type = " submit " class = " btn btn-colors d-block w-100 d-none " value = " REGISTRAR "/>
+                            <button  class = " btn btn-colors d-block w-100 " type = " submit " > Registrar </button>
                         </div>
                         </form> 
                     </div>
